fixed look or product page image on mobile

--- a/resources/sass/product-pagina/product-pagina.scss
+++ b/resources/sass/product-pagina/product-pagina.scss
@@ -45,6 +45,17 @@
 }
 
 .product-page__main-info {
+    position: relative;
+    top: -10rem;
+    margin-top: 2rem;
+    padding-top: 8rem;
+    @include breakpoint (medium down) {
+        margin-bottom: -10rem;           
+    }  
+    @include breakpoint (large up) {
+        top: 0;
+        padding-top: 0;        
+    }    
     @include breakpoint (large up) {
         padding-left: 10rem;
         padding-right: 10rem;
@@ -55,9 +66,9 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    top: -1.5rem;
     margin: 0 auto;
     width: 160px;
+    top: -1rem;
     @include breakpoint (large up) {
         top: -1.5rem;    
     }
@@ -68,6 +79,7 @@
     z-index: 2;
     display: flex;
     align-items: center;
+    top: -2rem;
     /* @include breakpoint (large up) {
         left: 10rem;        
     } */
@@ -82,19 +94,6 @@
     max-height: 646px;	
     max-width: 994px;
     margin: 0 auto;    
-}
-
-.product-page__main-info {
-    position: relative;
-    top: -10rem;
-    padding-top: 10rem;
-    @include breakpoint (medium down) {
-        margin-bottom: -10rem;           
-    }  
-    @include breakpoint (large up) {
-        top: 0;
-        padding-top: 0;        
-    }
 }
 
 .product-page__over-gam__subsection {
